[Combining variations] Refactor.
- Extract predicates from Players.